update mayflower to 8.25.0 and fix radio buttons wrapping issue

--- a/PFML/BenefitsCalculator/src/components/Part1/index.scss
+++ b/PFML/BenefitsCalculator/src/components/Part1/index.scss
@@ -3,17 +3,20 @@
 $margin: 5px;
 $total-margin: $margin * 2;
 
-.ma__input-group__items--inline.ma__input-group__items--outline .ma__input-group__item.item-5 {
-	width: calc(100% - #{$total-margin});
-	   
+.ma__input-group__items--inline.ma__input-group__items--outline {
+	.ma__input-group__item.item-5 {
+		width: calc(100% - #{$total-margin});
 	   @media ($bp-small-min) {
 	     width: calc(50% - #{$total-margin});
 	   }
-	   
-	   @media ($bp-medium-min) {
-	     width: calc(50% - #{$total-margin});
-	   }
-		
+
+		 &.col-large-1 {
+			 @media ($bp-large-max) {
+				 width: calc(100% - #{$total-margin});
+			 }
+		 }
+	}
+
 }
 
 .ma__collapse {
